<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="4dp"
                android:layout_margin="@dimen/standard_padding">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/standard_padding">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/signup"
                        android:textSize="@dimen/normal_text_size"
                        android:layout_marginBottom="@dimen/standard_padding"></TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fname"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/tiny_padding"></TextView>
                    <EditText
                        android:id="@+id/fname_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fname"
                        android:textSize="@dimen/small_text_size"
                        android:background="@drawable/edittext_bg_line"
                        android:padding="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding"></EditText>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mname"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/tiny_padding"></TextView>
                    <EditText
                        android:id="@+id/mname_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mname"
                        android:textSize="@dimen/small_text_size"
                        android:background="@drawable/edittext_bg_line"
                        android:padding="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding"></EditText>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lname"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/tiny_padding"></TextView>
                    <EditText
                        android:id="@+id/lname_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lname"
                        android:textSize="@dimen/small_text_size"
                        android:background="@drawable/edittext_bg_line"
                        android:padding="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding"></EditText>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/tiny_padding"></TextView>
                    <EditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textSize="@dimen/small_text_size"
                        android:background="@drawable/edittext_bg_line"
                        android:padding="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding"></EditText>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/tiny_padding"></TextView>
                    <EditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textSize="@dimen/small_text_size"
                        android:background="@drawable/edittext_bg_line"
                        android:padding="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding"></EditText>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birthdate"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/tiny_padding"></TextView>
                    <EditText
                        android:id="@+id/birthdate_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthdate"
                        android:textSize="@dimen/small_text_size"
                        android:background="@drawable/edittext_bg_line"
                        android:padding="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding"></EditText>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/tiny_padding"></TextView>
                    <EditText
                        android:id="@+id/contact_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contact"
                        android:textSize="@dimen/small_text_size"
                        android:background="@drawable/edittext_bg_line"
                        android:padding="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding"></EditText>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ssn"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/tiny_padding"></TextView>
                    <EditText
                        android:id="@+id/ssn_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ssn"
                        android:textSize="@dimen/small_text_size"
                        android:background="@drawable/edittext_bg_line"
                        android:padding="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding"></EditText>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add1"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/tiny_padding"></TextView>
                    <EditText
                        android:id="@+id/add1_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add2"
                        android:textSize="@dimen/small_text_size"
                        android:background="@drawable/edittext_bg_line"
                        android:padding="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding"></EditText>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add2"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/tiny_padding"></TextView>
                    <EditText
                        android:id="@+id/add2_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add2"
                        android:textSize="@dimen/small_text_size"
                        android:background="@drawable/edittext_bg_line"
                        android:padding="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding"></EditText>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/tiny_padding"></TextView>
                    <EditText
                        android:id="@+id/city_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city"
                        android:textSize="@dimen/small_text_size"
                        android:background="@drawable/edittext_bg_line"
                        android:padding="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding"></EditText>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/state"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/tiny_padding"></TextView>
                    <EditText
                        android:id="@+id/state_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/state"
                        android:textSize="@dimen/small_text_size"
                        android:background="@drawable/edittext_bg_line"
                        android:padding="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding"></EditText>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zipcode"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/tiny_padding"></TextView>
                    <EditText
                        android:id="@+id/zipcode_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/zipcode"
                        android:textSize="@dimen/small_text_size"
                        android:background="@drawable/edittext_bg_line"
                        android:padding="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding"></EditText>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textSize="@dimen/small_text_size"
                        android:layout_marginBottom="@dimen/tiny_padding"></TextView>
                    <RadioGroup
                        android:id="@+id/gender_rg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/small_text_size"
                        android:padding="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"></RadioButton>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"></RadioButton>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notdisclosed"></RadioButton>
                    </RadioGroup>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/reg_signup_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/orage_rounded_bg"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textSize="@dimen/small_text_size"
                        android:textColor="@color/white"
                        android:layout_marginBottom="@dimen/standard_padding">
                    </androidx.appcompat.widget.AppCompatButton>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/reg_signin_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:text="@string/signin"
                            android:textAllCaps="false"
                            android:textSize="@dimen/small_text_size"
                            android:textColor="@color/grey_dark"
                            android:layout_alignParentRight="true">
                        </androidx.appcompat.widget.AppCompatButton>
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>