<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".MainActivity">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="4dp"
    android:layout_marginLeft="@dimen/standard_padding"
    android:layout_marginRight="@dimen/standard_padding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signin"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginBottom="@dimen/standard_padding"
            android:textStyle="bold"></TextView>
        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="@dimen/small_text_size"
            android:background="@drawable/edittext_bg_line"
            android:padding="@dimen/standard_padding"
            android:layout_marginBottom="@dimen/standard_padding"
            android:inputType="textWebEmailAddress"></EditText>
        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="@dimen/small_text_size"
            android:background="@drawable/edittext_bg_line"
            android:padding="@dimen/standard_padding"
            android:layout_marginBottom="@dimen/standard_padding"
            android:inputType="textPassword"></EditText>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/orage_rounded_bg"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textSize="@dimen/small_text_size"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/standard_padding">
        </androidx.appcompat.widget.AppCompatButton>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/forgotpassword"
                android:textAllCaps="false"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/grey_dark">
            </androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/grey_dark"
                android:layout_alignParentRight="true">
            </androidx.appcompat.widget.AppCompatButton>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>