<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DropInCenterActivity"
    android:orientation="vertical">
    <include layout="@layout/toolbar_layout"></include>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/search_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/large_padding">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dropincenter"
        android:layout_margin="@dimen/standard_padding"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"></TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dropinsearchtext"
        android:layout_margin="@dimen/standard_padding"
        android:background="@drawable/edittext_bg_line"
        android:padding="@dimen/standard_padding"
        android:textSize="@dimen/small_text_size"></EditText>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/option_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginRight="@dimen/standard_padding"
        app:cardElevation="@dimen/card_elevation"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/standard_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="@dimen/imageview_width"
                android:layout_height="@dimen/imageview_height"
                android:layout_weight="1"
                android:layout_margin="@dimen/standard_padding"
                android:src="@drawable/image"></ImageView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="John Anderson"
                    android:textStyle="bold"></TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Southfield, 48075"
                    android:textStyle="bold"></TextView>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/nav_time_details_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_light"
                android:orientation="vertical"
                app:cardCornerRadius="@dimen/standard_corner_radius">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/navigator_details"
                        android:layout_margin="@dimen/standard_padding"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"></TextView>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey"
                        android:orientation="vertical"
                        android:padding="@dimen/standard_padding">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/orange_stroke_round_bg"
                            android:orientation="horizontal"
                            android:padding="@dimen/standard_padding"
                            android:gravity="center_vertical">
                            <ImageView
                                android:layout_width="@dimen/imageview_width"
                                android:layout_height="@dimen/imageview_height"
                                android:layout_weight="1"
                                android:src="@drawable/image"></ImageView>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:orientation="vertical"
                                android:layout_margin="@dimen/standard_padding"
                                android:gravity="center_vertical">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="John Anderson"
                                    android:textStyle="bold"></TextView>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="932 Tennessee Avenue Southfield AZ - ARIZONA 48075"
                                    android:textStyle="bold"></TextView>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/days_recyclerview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/standard_padding">
                    </androidx.recyclerview.widget.RecyclerView>
                    <TextView
                        android:id="@+id/day_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="@dimen/standard_padding"></TextView>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/slots_time_recyclerview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/standard_padding">
                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>